--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Pacifico&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174209240-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174209240-1');
+</script>
+
 </head>
 
 <body>
